envoyproxy/myapp.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: myapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: nginx:1.10
        ports:
        - containerPort: 80
