envoyproxy/myapp-envoy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-envoy
  labels:
    app: myapp-envoy
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: envoy-admin
    port: 9901
    targetPort: 9901
    protocol: TCP
  selector:
    app: myapp-envoy
